examples/federated-learning/tff/distributed-fl-simulation-k8s/mesh-wide/service-entries-workers-outside-mesh.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-tff-example-worker-1
  namespace: istio-egress
  labels:
    # Show this service and its telemetry in the Anthos Service Mesh page of the Google Cloud console
    service.istio.io/canonical-name: tff-worker-1.example.com
spec:
  endpoints:
    - address: tff-worker-1.example.com  # kpt-set: ${tff-worker-1-address}
  hosts:
    - tff-worker-1.example.com
  ports:
    - number: 8000
      name: grpc
      protocol: GRPC
  resolution: STATIC
  location: MESH_EXTERNAL
...
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-tff-example-worker-2
  namespace: istio-egress
  labels:
    # Show this service and its telemetry in the Anthos Service Mesh page of the Google Cloud console
    service.istio.io/canonical-name: tff-worker-2.example.com
spec:
  endpoints:
    - address: tff-worker-2.example.com  # kpt-set: ${tff-worker-2-address}
  hosts:
    - tff-worker-2.example.com
  ports:
    - number: 8000
      name: grpc
      protocol: GRPC
  resolution: STATIC
  location: MESH_EXTERNAL
...
