examples/federated-learning/tff/distributed-fl-simulation-k8s/mesh-wide/service-mesh-workers-inside-mesh.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: worker-1-to-service
  namespace: istio-egress
spec:
  hosts:
    - tff-worker-1.example.com
  http:
    - route:
        - destination:
            host: tff-worker-1.example.com
...
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: worker-2-to-service
  namespace: istio-egress
spec:
  hosts:
    - tff-worker-2.example.com
  http:
    - route:
        - destination:
            host: tff-worker-2.example.com
...
