examples/federated-learning/tff/distributed-fl-simulation-k8s/mesh-wide/egress-gateway.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: egress-gateway
  namespace: istio-egress
spec:
  selector:
    istio: egressgateway
  # Restrict the following items to tenant namespaces only, as needed
  # Ref: https://istio.io/latest/docs/reference/config/networking/gateway/#Server
  servers:
    - port:
        number: 80
        name: http2
        protocol: HTTP2
      hosts:
        - '*'
...
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: disable-mtls-tff-example-port-egress
  namespace: istio-egress
spec:
  selector:
    matchLabels:
      istio: egressgateway
  # Inherit mTLS mode from mesh- or namespace-wide settings
  mtls:
    mode: UNSET
  # Overwrite settings for the distributed TensorFlow Federated port
  portLevelMtls:
    80:
      mode: DISABLE
...
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-egress-from-egress-gateway-to-workers
  namespace: istio-egress
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            hosts:
              - istio-egressgateway.istio-egress.svc.cluster.local
              - tff-worker-1.tensorflow-federated.example.com  # kpt-set: ${tff-worker-1-hostname}
              - tff-worker-2.tensorflow-federated.example.com  # kpt-set: ${tff-worker-2-hostname}
...
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-egress-from-egress-gateway-to-tff-example-ports
  namespace: istio-egress
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            ports:
              - "80"
              - "8000"
...
